--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: ${USER}/octo:latest
+    image: ${USER}/octo:${TAG_NAME}
     container_name: ${USER}_octo
     network_mode: host
     privileged: true
